[gd_scene load_steps=4 format=3 uid="uid://dm33pbq85fag1"]

[ext_resource type="Script" uid="uid://bdge7t67xm73d" path="res://Scripts/pause.gd" id="1_l2mpd"]
[ext_resource type="FontFile" uid="uid://dxq335v7isuow" path="res://Fonts/rainyhearts.ttf" id="1_o80xk"]
[ext_resource type="Script" uid="uid://bdbpbjj57i8m0" path="res://Scripts/up.gd" id="3_5a6ek"]

[node name="Pause" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2mpd")

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.5
offset_top = -398.5
offset_right = 450.5
offset_bottom = 398.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.151276, 0.151276, 0.151276, 0.895)

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(643.91, 537.42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Play" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Resume"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Settings
"

[node name="Pause" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 46
text = "Pause"
horizontal_alignment = 1

[node name="Settings" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="Settings" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.137037
anchor_right = 0.755208
anchor_bottom = 0.878704
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="KeyBind" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "KeyBinds
"

[node name="BrightnessSettings" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Brightness
"

[node name="Sound" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "Sound"

[node name="SettingsClose" type="Button" parent="Settings"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 129.0
grow_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "x"

[node name="Brightness" type="ColorRect" parent="Settings"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="BrightnessLabel" type="Label" parent="Settings/Brightness"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Brightness"
horizontal_alignment = 1

[node name="BrightnessValue" type="Label" parent="Settings/Brightness"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1390.0
offset_top = 282.0
offset_right = -270.0
offset_bottom = 342.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="BrightnessSlider" type="HSlider" parent="Settings/Brightness"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -411.0
offset_top = -340.0
offset_right = 411.0
offset_bottom = -109.0
grow_horizontal = 2
grow_vertical = 2
max_value = 0.5
step = 0.01
value = 0.25

[node name="BrightnessClose" type="Button" parent="Settings/Brightness"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 129.0
grow_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "x"

[node name="KeyBinds" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="Keybind" type="Label" parent="KeyBinds"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Keybinds"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="KeyBinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.137037
anchor_right = 0.755208
anchor_bottom = 0.878704
offset_right = -754.999
offset_bottom = -0.000366211
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="Left" type="Label" parent="KeyBinds/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Left     "

[node name="Right" type="Label" parent="KeyBinds/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Right
"

[node name="jump" type="Label" parent="KeyBinds/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Jump
"

[node name="Interact" type="Label" parent="KeyBinds/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Interract"

[node name="Holding" type="Label" parent="KeyBinds/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Holding"

[node name="ButtonContainer" type="VBoxContainer" parent="KeyBinds"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.247396
anchor_top = 0.137037
anchor_right = 0.755208
anchor_bottom = 0.878704
offset_left = 525.0
offset_top = 4.57764e-05
offset_right = -229.999
offset_bottom = -0.000305176
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90

[node name="Left" type="Button" parent="KeyBinds/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "A"
script = ExtResource("3_5a6ek")
action = "A"

[node name="Right" type="Button" parent="KeyBinds/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "D"
script = ExtResource("3_5a6ek")
action = "D"

[node name="Jump" type="Button" parent="KeyBinds/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "w"
script = ExtResource("3_5a6ek")
action = "W"

[node name="Interact" type="Button" parent="KeyBinds/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "E"
script = ExtResource("3_5a6ek")
action = "E"

[node name="Holding" type="Button" parent="KeyBinds/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
text = "Q"
script = ExtResource("3_5a6ek")
action = "Q"

[node name="KeyBindClose" type="Button" parent="KeyBinds"]
custom_minimum_size = Vector2(0, 76.13)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 129.0
grow_horizontal = 0
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_o80xk")
theme_override_font_sizes/font_size = 64
action_mode = 0
text = "x"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/KeyBind" to="." method="_on_key_bind_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/BrightnessSettings" to="." method="_on_brightness_settings_pressed"]
[connection signal="pressed" from="Settings/SettingsClose" to="." method="_on_settings_close_pressed"]
[connection signal="pressed" from="Settings/Brightness/BrightnessClose" to="." method="_on_brightness_close_pressed"]
[connection signal="pressed" from="KeyBinds/KeyBindClose" to="." method="_on_key_bind_close_pressed"]
